--- a/angular-web-app/src/app/components/_pages/contact/contact.component.html
+++ b/angular-web-app/src/app/components/_pages/contact/contact.component.html
@@ -7,16 +7,13 @@
   <section class="page-section bg-light">
     <div class="container">
       <app-section-title
-        [title]="pageContent.content.contactCardsTitle"
-        [subTitle]="pageContent.content.contactCardsSubTitle"
-        [text]="pageContent.content.contactCardsText"
+        [title]="pageContent.content.contactCardsContent.title"
+        [subTitle]="pageContent.content.contactCardsContent.subTitle"
+        [text]="pageContent.content.contactCardsContent.text"
       ></app-section-title>
 
       <div class="row">
-        <div
-          *ngFor="let contactcard of pageContent.content.contactCards"
-          class="col-lg-4 col-md-6 col-sm-12"
-        >
+        <div *ngFor="let contactcard of pageContent.content.contactCardsContent.services" class="col-lg-4 col-md-6 col-sm-12">
           <!-- Service cards -->
           <app-service-card [service]="contactcard"></app-service-card>
         </div>
@@ -28,9 +25,9 @@
   <section class="page-section">
     <div class="container">
       <app-section-title
-        [title]="pageContent.content.contactFormTitle"
-        [subTitle]="pageContent.content.contactFormSubTitle"
-        [text]="pageContent.content.contactFormText"
+        [title]="pageContent.content.contactFormContent.title"
+        [subTitle]="pageContent.content.contactFormContent.subTitle"
+        [text]="pageContent.content.contactFormContent.text"
       ></app-section-title>
 
       <div class="row">
