--- a/angular-web-app/src/app/components/_pages/portfolio/portfolio.component.html
+++ b/angular-web-app/src/app/components/_pages/portfolio/portfolio.component.html
@@ -10,13 +10,13 @@
 
     <div class="container">
       <app-section-title
-        [title]="pageContent.content.galleryTitle"
-        [subTitle]="pageContent.content.gallerySubTitle"
-        [text]="pageContent.content.galleryText"
+        [title]="pageContent.content.galleryContent.title"
+        [subTitle]="pageContent.content.galleryContent.subTitle"
+        [text]="pageContent.content.galleryContent.text"
       ></app-section-title>
 
       <!-- Gallery -->
-      <app-gallery></app-gallery>
+      <app-gallery [maxHeight]="pageContent.content.galleryContent.maxHeight"></app-gallery>
 
     </div>
   </section>
