--- a/angular-web-app/src/app/components/_admin/layout-header/layout-header.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-header/layout-header.component.html
@@ -1,12 +1,92 @@
 <div class="container pt-5">
-  <app-section-title 
-    [title]="title"
-    [subTitle]="subTitle"
-    [text]="text">
+  <app-section-title [title]="title" [subTitle]="subTitle" [text]="text">
   </app-section-title>
 
-  <div class="row">
+  <div class="row mb-4">
     <div class="col-12">
+      <mat-card class="mat-elevation-z4">
+        <h4 class="title-underlined">Resultaat</h4>
+        <app-header 
+          [small]="headerContent.small"
+          [typing]="headerContent.typing"
+          [paralax]="headerContent.paralax"
+          [title]="headerContent.defaultTitle"
+          [subTitle]="headerContent.defaultSubtitle"
+          [image]="headerContent.defaultImage">
+        </app-header>
+      </mat-card>
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col-12">
+      <mat-card class="mat-elevation-z4">
+        <h4 class="title-underlined">Instellingen</h4>
+        <form (ngSubmit)="onSubmit()" #headerForm="ngForm">
+
+          <div class="form-group row">
+            <mat-form-field appearance="fill" class="form-field col-12">
+              <mat-label>Standaard titel</mat-label>
+              <input matInput type="text" id="defaultTitle" placeholder="Titel" name="defaultTitle" [(ngModel)]="headerContent.defaultTitle"
+                #defaultTitle="ngModel" required>
+              <mat-hint [hidden]="defaultTitle.valid || defaultTitle.pristine">Titel is verplicht</mat-hint>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group row">
+            <mat-form-field appearance="fill" class="form-field col-12">
+              <mat-label>Standaard subtitel</mat-label>
+              <input matInput type="text" id="defaultSubTitle" placeholder="Subtitel" name="defaultSubTitle" [(ngModel)]="headerContent.defaultSubtitle"
+                #defaultSubTitle="ngModel" required>
+              <mat-hint [hidden]="defaultSubTitle.valid || defaultSubTitle.pristine">Subtitel is verplicht</mat-hint>
+            </mat-form-field>
+          </div>
+
+          <div class="form-group row">
+            <mat-form-field appearance="fill" class="form-field col-12">
+              <mat-label>Standaard afbeelding</mat-label>
+              <input matInput type="text" id="defaultImage" placeholder="Afbeelding" name="defaultImage" [(ngModel)]="headerContent.defaultImage"
+                #defaultImage="ngModel" required>
+              <mat-hint [hidden]="defaultImage.valid || defaultImage.pristine">Afbeelding is verplicht</mat-hint>
+            </mat-form-field>
+          </div>
+
+          <div class="row">
+            <div class="col-4">
+              <div class="form-field form-field-slide">
+                <mat-label>Typewriter</mat-label>
+                <mat-slide-toggle [(ngModel)]="headerContent.typing" name="typing" 
+                  [checked]="headerContent.typing" (change)="setBoolean(headerContent.typing , $event)" 
+                  class="slide-toggle-form">
+                </mat-slide-toggle>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="form-field form-field-slide">
+                <mat-label>Paralax</mat-label>
+                <mat-slide-toggle [(ngModel)]="headerContent.paralax" name="paralax" 
+                  [checked]="headerContent.paralax" (change)="setBoolean(headerContent.paralax , $event)" 
+                  class="slide-toggle-form">
+                </mat-slide-toggle>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="form-field form-field-slide">
+                <mat-label>Klein</mat-label>
+                <mat-slide-toggle [(ngModel)]="headerContent.small" name="small" 
+                  [checked]="headerContent.small" (change)="setBoolean(headerContent.small , $event)" 
+                  class="slide-toggle-form">
+                </mat-slide-toggle>
+              </div>
+            </div>
+          </div>
+
+
+          <button mat-flat-button color="accent" type="submit" [disabled]="!headerForm.form.valid || headerForm.form.pristine">Opslaan</button>
+          <button mat-flat-button color="primary" type="button" class="ml-3" (click)="reset()">Reset</button>
+        </form>
+      </mat-card>
+
     </div>
   </div>
 </div>
