--- a/angular-web-app/src/app/components/_admin/layout-header/layout-header.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-header/layout-header.component.html
@@ -1,4 +1,4 @@
-<div class="container pt-5">
+<div class="container-fluid pt-5">
   <app-section-title [title]="title" [subTitle]="subTitle" [text]="text">
   </app-section-title>
 
@@ -25,16 +25,13 @@
         <form (ngSubmit)="onSubmit()" #headerForm="ngForm">
 
           <div class="form-group row">
-            <mat-form-field appearance="fill" class="form-field col-12">
+            <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
               <mat-label>Standaard titel</mat-label>
               <input matInput type="text" id="defaultTitle" placeholder="Titel" name="defaultTitle" [(ngModel)]="headerContent.defaultTitle"
                 #defaultTitle="ngModel" required>
               <mat-hint [hidden]="defaultTitle.valid || defaultTitle.pristine">Titel is verplicht</mat-hint>
             </mat-form-field>
-          </div>
-
-          <div class="form-group row">
-            <mat-form-field appearance="fill" class="form-field col-12">
+            <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
               <mat-label>Standaard subtitel</mat-label>
               <input matInput type="text" id="defaultSubTitle" placeholder="Subtitel" name="defaultSubTitle" [(ngModel)]="headerContent.defaultSubtitle"
                 #defaultSubTitle="ngModel" required>
