--- a/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
@@ -1,4 +1,4 @@
-<div class="container pt-5">
+<div class="container-fluid pt-5">
   <app-section-title 
     [title]="title"
     [subTitle]="subTitle"
