--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -39,6 +39,7 @@ button::-moz-focus-inner {
   background: white;
   position: relative;
   z-index: 3;
+  margin-bottom: 35px !important;
 }
 
 .main-raised {
