Changed scroll indicator

--- a/angular-web-app/src/app/components/_admin/page-not-found/page-not-found.component.html
+++ b/angular-web-app/src/app/components/_admin/page-not-found/page-not-found.component.html
@@ -13,6 +13,7 @@
                     <ngx-simplebar class="d-flex flex-column scroll-content">
                        <app-page-not-found></app-page-not-found> 
                     </ngx-simplebar>
+                    <div class="icon-scroll" style="bottom: 70px;"></div>
                 </div>
             </mat-card>
         </div>
